# orko

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: release_pypi.yaml  tests.yaml
src/orko/: build_meta.py
src/orko/cli/: __init__.py
src/orko/core/: base.py  env.py  process.py
tests/: conftest.py  test_build_meta.py  test_dependency.py  test_process.py
tests/data/: dep_modifier.toml  optional_deps_as_dict.toml  optional_deps_as_list.toml  simple_pyproject.toml  strict_orko.toml
