[build-system]
requires = ["setuptools >=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "orko"
authors = [
    { name = "Marcelo Duarte Trevisani", email = "marceloduartetrevisani@gmail.com" },
]
description = "Project to manage conda environments and dependencies."
readme = "README.md"
keywords = ["conda", "environment", "pyproject.toml"]
license = { text = "Apache-2.0" }
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "rich-click",
    "click",
    "tomli",
    "packaging",
    "pyyaml",
    "conda-souschef",
]

[project.scripts]
orko = "orko.cli:orko_cli"

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-xdist[psutil]",
    "pytest-cov",
    "pip",
]
dev = [
    "orko[testing]",
    "pre-commit",
]

[tool.setuptools_scm]
write_to = "src/orko/_version.py"

[tool.black]
target-version = ["py310"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | _build
  | buck-out
  | build
  | dist
  | tests/data
)/
'''

[tool.setuptools.packages.find]
include = ["orko", "orko.*"]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
